--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,5 @@
 /* Main */
 
-.main__container {
-   
-}
-
 /* Home */
 
 .home__main-container {
@@ -13,13 +9,13 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 25vh;
+    /* height: 25vh; */
 }
 
 .home__links {
     margin-top: 25px;
     font-size: 28px;
-    color: #251C45;
+    color: #F1F1F1;
 }
 
 .home__links:hover {
@@ -32,15 +28,20 @@
 
 .home__header-logo {
     width: 400px;
+    height: 300px;
 }
 
 /* SignUp Form */
 .signup__main-container {
     width: 100%;
+    /* height: 50vh; */
+    color: #F1F1F1;
+    margin-top: 25px;
 }
 
 .signup__main-messages {
-
+    text-align: center;
+    margin: 10px;
 }
 
 .signup__main-form {
@@ -53,45 +54,84 @@
 }
 
 .signup__main-label {
-
+    font-size: 22px;
+    width: 59%;
+    text-align: left;
 }
 
 .signup__main-input {
+    height: 40px;
+    width: 250px;
+    margin: 5px;
+    padding: 5px;
+    font-size: 14px;
+    border: none;
+    border-radius: 5px;
+}
 
+input:focus, input:active {
+    outline-color: #F3AC3C;
 }
 
 .signup__main-password-container {
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 61%;
 }
 
 .button__password {
-    background-color: white;
+    background-color: #251C45;
+    border: none;
     cursor: pointer;
-    margin-left: 5px;
-    width: 25px;
-    height: 25px;
+    margin-left: 1px;
+    font-size: 22px;
+    color: white;
 }
 
-.name__input {
-
-}
-
-.email__input {
-
-}
-
-.password__input {
-
-}
-
-.occupation__input {
-
-}
-
-.state__input {
-
+.button__password:hover {
+    color: #E06157;
 }
 
 .signup__main-button {
+    border-radius: 4px;
+    background-color: #EFAC41;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 28px;
+    width: 200px;
+    height: 50px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 10px;
+}
 
+.signup__main-button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+}
+
+.signup__main-button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+}
+
+.signup__main-button:hover {
+    background-color: #E06157;
+}
+
+.signup__main-button:hover span {
+    padding-right: 25px;
+}
+
+.signup__main-button:hover span:after {
+    opacity: 1;
+    right: 0;
 }
