--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,11 @@
 /* Home */
 
 .home__main-container {
-    /* border: 2px solid red; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
-    /* height: 25vh; */
 }
 
 .home__links {
@@ -27,14 +25,13 @@
 }
 
 .home__header-logo {
-    width: 400px;
-    height: 300px;
+    width: 350px;
+    height: 250px;
 }
 
 /* SignUp Form */
 .signup__main-container {
     width: 100%;
-    /* height: 50vh; */
     color: #F1F1F1;
     margin-top: 25px;
 }
@@ -104,7 +101,7 @@ input:focus, input:active {
     height: 50px;
     transition: all 0.5s;
     cursor: pointer;
-    margin: 10px;
+    margin: 15px;
 }
 
 .signup__main-button span {
@@ -134,4 +131,14 @@ input:focus, input:active {
 .signup__main-button:hover span:after {
     opacity: 1;
     right: 0;
+}
+
+.signup__privacy {
+    font-weight: lighter;
+    text-align: center;
+}
+
+.underline {
+    text-decoration: underline;
+    cursor: pointer;
 }
